<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/today"
        android:icon="@drawable/ic_tune_white_24dp"
        android:title="@string/time_today" />
    <item
        android:id="@+id/week"
        android:icon="@drawable/ic_tune_white_24dp"
        android:title="@string/time_week" />
    <item
        android:id="@+id/month"
        android:icon="@drawable/ic_tune_white_24dp"
        android:title="@string/time_month" />
    <item
        android:id="@+id/last_month"
        android:icon="@drawable/ic_tune_white_24dp"
        android:title="@string/time_last_month" />
    <item
        android:id="@+id/year"
        android:icon="@drawable/ic_tune_white_24dp"
        android:title="@string/time_year" />
    <item
        android:id="@+id/custom"
        android:icon="@drawable/ic_tune_white_24dp"
        android:title="@string/time_custom" />
</menu>