<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.usage.Act_AppUsage">

    <View
        android:id="@+id/placeholder"
        android:layout_width="1dp"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_gravity="end" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/total_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:includeFontPadding="false"
                android:text="@string/appusage_total_usage_title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textColor="@color/text_white_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:includeFontPadding="false"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Display3"
                android:textColor="@color/text_white_primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/total_title" />

            <TextView
                android:id="@+id/most_used_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:includeFontPadding="false"
                android:text="@string/appusage_most_used_app"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textColor="@color/text_white_primary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/total" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/appusage_chart"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/most_used_title" />

            <LinearLayout
                android:id="@+id/apps_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/system_background_dark"
                android:minHeight="100dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/appusage_chart" />

            <TextView
                android:id="@+id/apps_show_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/system_background_dark"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/appusage_most_used_app_show_all"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
                android:textColor="@color/text_white_label"
                app:layout_constraintTop_toBottomOf="@+id/apps_layout" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:background="@drawable/toolbar_gradient" />

    <include
        android:id="@+id/loading"
        layout="@layout/system_loading"
        android:visibility="gone" />
</FrameLayout>