<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.network.Act_Network">

    <View
        android:id="@+id/placeholder"
        android:layout_width="1dp"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_gravity="end" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/bytes_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:includeFontPadding="false"
                android:text="@string/network_rx_bytes_title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textColor="@color/text_white_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bytes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:includeFontPadding="false"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Display3"
                android:textColor="@color/text_white_primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bytes_title" />

            <TextView
                android:id="@+id/bytes_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:includeFontPadding="false"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/system_primary"
                app:layout_constraintBottom_toBottomOf="@+id/bytes"
                app:layout_constraintStart_toEndOf="@+id/bytes" />

            <TextView
                android:id="@+id/packets_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:includeFontPadding="false"
                android:text="@string/network_rx_packets_title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textColor="@color/text_white_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bytes" />

            <TextView
                android:id="@+id/packets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:includeFontPadding="false"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
                android:textColor="@color/text_white_primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/packets_title" />

            <TextView
                android:id="@+id/packets_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"
                android:includeFontPadding="false"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/system_primary"
                app:layout_constraintBottom_toBottomOf="@+id/packets"
                app:layout_constraintStart_toEndOf="@+id/packets" />

            <FrameLayout
                android:id="@+id/progress_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="32dp"
                android:background="@color/system_background_dark"
                app:layout_constraintBottom_toTopOf="@+id/network_chart"
                app:layout_constraintTop_toBottomOf="@+id/packets" />

            <it.emperor.deviceusagestats.ui.views.WheelProgressView
                android:id="@+id/progress_wifi"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="56dp"
                app:layout_constraintEnd_toStartOf="@+id/progress_mobile"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/packets"
                app:wpv_progress_background_color="@color/system_background_light"
                app:wpv_progress_color="@color/system_secondary" />

            <it.emperor.deviceusagestats.ui.views.WheelProgressView
                android:id="@+id/progress_mobile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="56dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/progress_background"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/progress_wifi"
                app:layout_constraintTop_toBottomOf="@+id/packets"
                app:wpv_progress_background_color="@color/system_background_light"
                app:wpv_progress_color="@color/system_tertiary" />

            <it.emperor.deviceusagestats.ui.views.WheelProgressView
                android:id="@+id/progress_background"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="52dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/progress_mobile"
                app:layout_constraintTop_toBottomOf="@+id/packets"
                app:wpv_progress_background_color="@color/system_background_light"
                app:wpv_progress_color="@color/system_primary" />

            <it.emperor.deviceusagestats.ui.views.WheelProgressView
                android:id="@+id/progress_foreground"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/progress_mobile"
                app:layout_constraintTop_toBottomOf="@+id/progress_background"
                app:wpv_progress_background_color="@color/system_background_light"
                app:wpv_progress_color="@color/system_primary" />

            <TextView
                android:id="@+id/progress_wifi_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:lineSpacingMultiplier="0.9"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textColor="@color/text_white_primary"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="@+id/progress_wifi"
                app:layout_constraintEnd_toEndOf="@+id/progress_wifi"
                app:layout_constraintStart_toStartOf="@+id/progress_wifi"
                app:layout_constraintTop_toTopOf="@+id/progress_wifi" />

            <TextView
                android:id="@+id/progress_mobile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:lineSpacingMultiplier="0.9"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textColor="@color/text_white_primary"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="@+id/progress_mobile"
                app:layout_constraintEnd_toEndOf="@+id/progress_mobile"
                app:layout_constraintStart_toStartOf="@+id/progress_mobile"
                app:layout_constraintTop_toTopOf="@+id/progress_mobile" />

            <TextView
                android:id="@+id/progress_background_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:lineSpacingMultiplier="0.9"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textColor="@color/text_white_primary"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/progress_background"
                app:layout_constraintEnd_toEndOf="@+id/progress_background"
                app:layout_constraintStart_toStartOf="@+id/progress_background"
                app:layout_constraintTop_toTopOf="@+id/progress_background" />

            <TextView
                android:id="@+id/progress_foreground_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:lineSpacingMultiplier="0.9"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textColor="@color/text_white_primary"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/progress_foreground"
                app:layout_constraintEnd_toEndOf="@+id/progress_foreground"
                app:layout_constraintStart_toStartOf="@+id/progress_foreground"
                app:layout_constraintTop_toTopOf="@+id/progress_foreground" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/network_chart"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toBottomOf="@+id/progress_wifi" />

            <TextView
                android:id="@+id/chart_bubble"
                style="@style/FontLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/bubble"
                android:gravity="center_horizontal"
                android:lineSpacingMultiplier="0.9"
                android:textColor="@color/text_white_primary"
                android:textSize="11sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progress_wifi"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/apps_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/system_background_dark"
                android:paddingBottom="8dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="8dp"
                android:text="Most used apps"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textColor="@color/text_white_primary"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/network_chart" />

            <LinearLayout
                android:id="@+id/apps_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/system_background_dark"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/apps_title" />

            <TextView
                android:id="@+id/apps_show_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/system_background_dark"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="Show all"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
                android:textColor="@color/text_white_label"
                app:layout_constraintTop_toBottomOf="@+id/apps_layout" />

            <Switch
                android:id="@+id/rx_tx_switch"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:checked="true"
                android:gravity="end|center_vertical"
                android:text="@string/network_switch_on"
                android:textColor="@color/text_white_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:background="@drawable/toolbar_gradient" />

    <include
        android:id="@+id/loading"
        layout="@layout/system_loading"
        android:visibility="gone" />
</FrameLayout>